syntax = "proto3";

import "image.proto";

option java_package = "net.franchu.neuralstyleartproject";

service NeuralStyleWorker {
    rpc RequestJob (JobRequest) returns (Job);
    rpc AcknowledgeJob (JobAck) returns (JobAck);
    rpc ProgressReport (JobResult) returns (JobProgressResponse);
    rpc CompleteJob (JobResult) returns (JobResultResponse);
    rpc FailJob (JobFail) returns (JobFail);
}

message JobRequest {
}

message JobAck  {
}

message Job {
    string id = 1;
    string name = 2;
    InputImage style = 4;
    InputImage content = 5;
}

message JobResult {
    string id = 1;
    string name = 2;
    int32 progress_count = 3;
    ImageFormat format = 4;
    bytes image = 5;
}

message JobResultResponse {
}

message JobFail {
    string id = 1;
    string name = 2;
}

message JobProgressResponse {
}
